[gd_scene load_steps=7 format=3 uid="uid://6febatyg55pk"]

[ext_resource type="Texture2D" uid="uid://dd5ugr10w1bxo" path="res://Art/magic_book.png" id="1_28flt"]
[ext_resource type="Script" uid="uid://bxykbubt7ceut" path="res://Scripts/main_menu.gd" id="1_48xlc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28flt"]
bg_color = Color(0.231373, 0.12549, 0.509804, 0.309804)

[sub_resource type="Animation" id="Animation_48xlc"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1ehe0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ce3w2"]
_data = {
&"RESET": SubResource("Animation_1ehe0"),
&"fade_in": SubResource("Animation_48xlc")
}

[node name="PanelContainer" type="PanelContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_28flt")
script = ExtResource("1_48xlc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 0

[node name="RichTextLabel5" type="RichTextLabel" parent="MarginContainer/VBoxContainer/CenterContainer"]
clip_contents = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Spellbound Dungeon"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("1_28flt")

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/MenuOptions"]
clip_contents = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[url]Continue[/url]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
meta_underlined = false

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/MenuOptions"]
clip_contents = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[url]New[/url]
"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
meta_underlined = false

[node name="RichTextLabel3" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/MenuOptions"]
clip_contents = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[url]Options[/url]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
meta_underlined = false

[node name="RichTextLabel4" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/MenuOptions"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[url]Controls[/url]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
meta_underlined = false

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
libraries = {
&"": SubResource("AnimationLibrary_ce3w2")
}
